[package]
name = "kettle-boot"
version = "0.1.0"
authors = ["TehcJS <tehcdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kettle-boot-api = { path = "kettle-boot-api" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["build"]
